add properties for DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.h2.console.enabled = true
+
+spring.datasource.url = jdbc:h2:mem:testdb
+spring.datasorce.driverClassName = org.h2.Driver
+spring.datasource.username = sa
+
+spring.jpa.hibernate.ddl-auto = create-drop
 
