Aggiunta del caricamento foto, merge della modifica del DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username = sa
 
 spring.jpa.hibernate.ddl-auto = create-drop
 
+spring.servlet.multipart.max-file-size = 15MB
+spring.servlet.multipart.max-request-size = 15MB
+
