--- a/.github/workflows/maven_CI_CD.yml
+++ b/.github/workflows/maven_CI_CD.yml
@@ -2,9 +2,9 @@ name: Maven CI/CD
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 jobs:
   build_and_test:
