--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.hibernate.ddl-auto = create-drop
 spring.servlet.multipart.max-file-size = 15MB
 spring.servlet.multipart.max-request-size = 15MB
 
+server.error.whitelabel.enabled=false
